# linear-v8

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  CHANGELOG.md  README.md  cabal.project  flake.nix  linear-v8.cabal  stack.yaml
csrc/: v8.cpp
docker/: v8_args
src/: V8.hs
src/V8/Internal/: OsThread.hs  Ref.hs  SharedPtr.hs
