cabal-version:      2.4
name:               linear-v8
version:            0.1.0.0
synopsis:           A linear type based binding to Google V8 JavaScript engine
license:            BSD-3-Clause
author:             kokobd
maintainer:         contact@zelinf.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable linear-v8
    main-is:          Main.hs
    build-depends:
        base ^>= 4.16
      , linear-base ^>= 0.2.0
    hs-source-dirs:   app
    default-language: Haskell2010
