cabal-version:      2.4
name:               linear-v8
version:            0.1.0.0
synopsis:           A linear type based binding to Google V8 JavaScript engine
license:            BSD-3-Clause
author:             kokobd
maintainer:         contact@zelinf.net
extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: src
    exposed-modules:
        V8
        V8.Internal.OsThread
        V8.Internal.SharedPtr
        V8.Internal.Ref
    build-depends:
        base ^>= 4.16
      , linear-base ^>= 0.2.0
      , inline-c-cpp
      , monad-loops
    default-language: Haskell2010
    cxx-sources:
        csrc/v8.cpp
    extra-libraries:
        v8
        v8_libplatform
        stdc++
